--- a/demo.html
+++ b/demo.html
@@ -49,5 +49,11 @@
   <p>From now with no suffix:</p>
   <cw-moment fromNow noSuffix></cw-moment>
 
+  <p>With auto refresh:</p>
+  <cw-moment fromNow autoRefresh></cw-moment>
+
+  <p>And a refresh rate of 1 second:</p>
+  <cw-moment fromNow autoRefresh="1"></cw-moment>
+
 </body>
 </html>
